[gd_scene load_steps=4 format=3 uid="uid://main123"]

[ext_resource type="Script" path="res://main.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://player123" path="res://player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://ball123" path="res://ball.tscn" id="3_ball"]

[node name="Main" type="Node2D"]
script = ExtResource("1_script")
ball_scene = ExtResource("3_ball")

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(400, 500)

[node name="BallTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="DifficultyLabel" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 54.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Level: 1"
horizontal_alignment = 2

[node name="MessageLabel" type="Label" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER
Press R to Restart"
horizontal_alignment = 1
